# Client-Server

./: .gitignore  README.md
Client/: CMakeLists.txt  Makefile  client.cpp  main.cpp
Client/include/: client.h  consoleclient.h
Client/src/: client.cpp  consoleclient.cpp  main.cpp
Client/tests/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  Makefile  Server.pro  consoleserver.cpp  server.h
Server/include/: consoleserver.h  server.h
Server/src/: consoleserver.cpp  server.cpp
Server/test/: CMakeLists.txt  main.cpp  tst_casename.h  tst_mockserver.h
Shared/: cxxopts.h
src/Client/: Client.pro  client.cpp  client.h  main.cpp
src/Server/: Server.pro  consoleserver.cpp  consoleserver.h  main.cpp  server.cpp  server.h
src/Shared/: shared.h
tests/: CMakeLists.txt  main.cpp  tst_MockServer.h
